apps/synology/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synology
  namespace: synology
spec:
  type: ClusterIP
  ports:
    - name: https
      port: 80
      targetPort: 5001
  selector: {}
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: synology
  namespace: synology
  labels:
    kubernetes.io/service-name: synology
addressType: IPv4
ports:
  - name: https
    port: 5001
    protocol: TCP
endpoints:
  - addresses:
      - 192.168.68.60
    conditions:
      ready: true
